[package]
name = "aoc"
version = "0.1.0"
authors = ["spriest487 <spriest487@googlemail.com>"]
edition = "2018"

[dependencies]
levenshtein = "1.0"
regex = "1.1"
chrono = "0.4.6"
rayon = "1.0.3"

[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3.rs"

[[bin]]
name = "day_4"
path = "src/day_4.rs"

[[bin]]
name = "day_5"
path = "src/day_5.rs"

[[bin]]
name = "day_6"
path = "src/day_6.rs"

[[bin]]
name = "day_7"
path = "src/day_7.rs"

[[bin]]
name = "day_8"
path = "src/day_8.rs"

[[bin]]
name = "day_10"
path = "src/day_10.rs"

[[bin]]
name = "day_11"
path = "src/day_11.rs"

[[bin]]
name = "day_12"
path = "src/day_12.rs"

[[bin]]
name = "day_13"
path = "src/day_13.rs"

[[bin]]
name = "day_14"
path = "src/day_14.rs"

[[bin]]
name = "day_15"
path = "src/day_15.rs"